--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <title>iMAKE Innovation Center Data Science Team</title>
   </head>
   <body>
-    <div class="mx-auto container my-5 text-center" id="main-container">
+    <div class="container d-flex 
+    align-items-center 
+    justify-content-center 
+    min-vh-100 text-center" id="main-container">
+      <div>
         <h2 class="text-primary">📈 iMAKE Innovation Center Data Science Team</h2>
         <hr>
         <p>Welcome to the iMAKE Innovation Center's data science team! This is where you can find links for our Discord, Notion, and other important links.</p>
@@ -22,12 +26,14 @@
               <a href="#">Discord</a>
             </div>
             <div class="col-sm">
-              <a href="#">Notion: Message Gray on Teams</a>
+              <a href="https://github.com/imake-ds-team">Github</a>
             </div>
             <div class="col-sm">
               <a href="https://www.mvc.edu">MVC</a>
             </div>
           </div>
+      </div>
+        
     </div>
   </body>
 </html>
