--- a/index.html
+++ b/index.html
@@ -24,9 +24,13 @@
       <h2>📈 iMAKE Innovation Center Data Science Team</h2>
       <hr>
       <p>Welcome to the iMAKE Innovation Center's data science team! This is a resource for exposing members of the community to data science through Kaggle competitions. Below you can find important links such as our Github repo.</p>
+      <p>Have any questions? Please contact me on Teams or email me at <a href="mailto:ugreenridg2@student.rccd.edu">ugreenridg2 [at] student [dot] rccd [dot] edu</a></p>
       <h4>Meetings: TBA</h4>
       <h3 id="links" class="mt-5"><a href="#links">🔗 Links</a></h3>
       <div class="row">
+        <div class="col-sm">
+          <a href="/get-started">Get Started</a>
+        </div>
         <div class="col-sm">
           <a href="#">Discord</a>
         </div>
